--- a/style.css
+++ b/style.css
@@ -25,19 +25,8 @@
 }
 
 body {
-  /*
-  Maneira longa de fazer os processos de personalização da página:
-  background-image: url(./assets/bg-mobile.jpg);
-   Seta a imagem como fundo do site 
-  background-repeat: no-repeat;
-   Força a imagem setada para não haver repetição 
-  background-position: top center;
-   Seta a posição do background 
-  background-size: cover;
-  Seta o tamanho do background nesse caso o fazendo cobrir toda a tela 
-  */
   background: var(--bg-url) no-repeat top center/cover;
-  /* Maneira mais otimizada de realizar todos os processos básicos */
+  height: 100vh;
 }
 
 body * {
@@ -45,7 +34,8 @@ body * {
   color: var(--text-color);
 }
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   margin: 56px auto 0px;
   padding: 0 24px;
 }
@@ -166,4 +156,14 @@ footer {
   padding: 24px 0;
   text-align: center;
   font-size: 14px;
+}
+/*media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
+  }
 }
